[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathformer"
version = "0.1.0"
description = "A transformer-based math library"
readme = "README.md"
authors = [
  { name = "Author Name", email = "author@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "safetensors>=0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/JeremySu0818/MathFormer-API"
"Bug Tracker" = "https://github.com/JeremySu0818/MathFormer-API/issues"
